# DS_Time_Series_Prediction_In_Welding_Process_Control

./: LICENSE  README.md  SStanisic_800409_IndustryLabProjectPresentation.pptx
Code/: Python_project_env.txt  pyproject.toml
Code/Models/BasicWorkflowBest/models_/: 60000_0_00_lin_reg_prediction.csv  60001_0_00_aarima_prediction.csv  60002_0_00_lin_reg_prediction.csv  60003_0_00_naive_last_prediction.csv  60010_0_00_aarima_prediction.csv  60016_0_00_naive_last_prediction.csv  60020_0_00_naive_last_prediction.csv  60021_0_00_aets_prediction.csv  60022_0_00_lin_reg_prediction.csv  60023_0_00_lin_reg_prediction.csv  60024_0_00_aarima_prediction.csv  (+43 more)
Code/Notebooks/: Part1_Prep1_Load_Raw_Create_Save_Strucutred.ipynb  Part1_Prep1a_Visual_Analysis_Structured.ipynb  Part1_Prep2_Load_Strucured_Create_Save_Sumarized.ipynb  Part1_Prep2a_Visual_Analysis_Sumarized.ipynb  Part1_Prep3_Load_Structured_Create_Save_Plain.ipynb  Part1_Prep3a_Visual_Analysis_Plain.ipynb  Part1_Prep4_Load_Plain_Create_Save_Exogenous.ipynb  Part1_Prep5_Load_Split_By_Spot_Save.ipynb  Part1_Prep6_Load_By_Spot_Fill_Gaps_In_Days_Save.ipynb  Part1_Prep7_Load_With_Filled_Gaps_Resample_Save.ipynb  Part1_Prep7a_Visual_Analysis_By_Spot.ipynb  Part2_Train1_Basic_Workflow.ipynb  Part2_Train1a_Basic_Workflow_Best_Models.ipynb  Part2_Train2_Cross_Validation_Workflow.ipynb  Part2_Train2a_Cross_Validation_Workflow_Best_Models.ipynb  Part3_Test1_Basic_Workflow.ipynb  Part3_Test2_Cross_Validation_Workflow.ipynb  Part4_Deploy1_Auto_All.ipynb  columns.py  dataframes.py  infer.py  utils.py  utils_display.py  utils_train_test.py
